# peep

./: .clang-format  .editorconfig  .gitattributes  .gitignore  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: ci.yml
assets/: cat.ppm
benchmarks/: bench.cpp
cmake/: peepConfig.cmake.in  termimageConfig.cmake.in
colormaps/: README.md  embed_assets.py
examples/: 01_readme_minimal.cpp  02_score_matrix.cpp  03_colormap_gallery.cpp  04_missing_data_mask.cpp  05_outliers_and_infinities.cpp  06_crop_debug_chip.cpp  07_covariance_coolwarm.cpp  08_correlation_matrix.cpp  09_confusion_matrix.cpp  10_activation_heatmap.cpp  11_residuals_heatmap.cpp  12_matlab_peaks.cpp  13_gaussian_blobs.cpp  14_mandelbrot_preview.cpp  15_false_color_rgb.cpp  16_ppm_cat.cpp  17_rgb_accessor_field.cpp  18_capture_for_logs.cpp  19_column_major_layout.cpp  20_terminal_fit_modes.cpp  demo.cpp  ppm_demo.cpp
include/: termimage.h  termimage_colormaps.h  termimage_terminal.h
include/peep/: colormaps.hpp  options.hpp  peep.hpp  terminal.hpp
include/peep/detail/: ansi.hpp  colormap.hpp  colormap_registry.hpp  common.hpp  decorators.hpp  fit.hpp  region.hpp  render.hpp  sampling.hpp  terminal.hpp
include/termimage/: colormaps.hpp  detail.hpp  termimage.hpp  terminal.hpp
scripts/: embed_assets.py  generate_colormaps.py  run_examples.sh
tests/: bench.cpp  peep_test.cpp  termimage_test.cpp
tests/package_smoke/: CMakeLists.txt  package_smoke.cpp
